Pharmacy Page (frontend)

--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Home/About.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Home/About.cshtml
@@ -10,20 +10,16 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="block">
-						<h1>About us</h1>
-						<h2>
+						<h>About us</h>
+						<p>
 							Find Out More About Us and Our Website
-						</h2>
+						</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<br />
-	<br />
-	<br />
-	<br />
 
 
 	<!--ABOUT THE PROJECT AREA-->
@@ -42,10 +38,6 @@
 		</div>
 	</section>
 
-	<br />
-	<br />
-	<br />
-	<br />
 
 	<!--ABOUT THE FEATURE AREA-->
 	<section class="about-2" id="about-2">
@@ -62,11 +54,5 @@
 			</div>
 		</div>
 	</section>
-
-	<br />
-	<br />
-	<br />
-	<br />
-
 
 </body>
