--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Shared/_Layout.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@
                         <h5 class="text-uppercase mb-0">Contact us</h5>
                         <ul class="list-unstyled">
                             <li>
-                                <a class=" text-white" href="mailto: abc@example.com">eleficNet@outlook.com</a>
+                                <a class=" text-white" href="mailto: abc@example.com">eleFicNet@outlook.com</a>
                             </li>
                         </ul>
                     </div>
