--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Index.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Index.cshtml
@@ -3,16 +3,21 @@
 }
 
 <body>
-	<!--HERO AREA-->
-	<section class="hero-area">
-		<div class="d-flex justify-content-end align-items-end">
-			<div class="block">
-				<h2>Making Health Care <br /> Better<span style="color: white"> Together </span></h2>
-				<p class="banner-p text-black">Welcome to eleficNet.<br /> Here we care about you and your health and we want to make your life easier</p>
+
+	<section id="hero-area">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 offset-md-6">
+					<div class="block">
+						<h>Making Health Care <br /> Better <span style="color: white">Together</span></h>
+						<p>
+							Welcome to eleficNet. Here we care about you and your health and <br />we want to make your life easier
+						</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
-
 
 	<!--SERVICE SECTION-->
 	<section class="services" id="services">
@@ -116,7 +121,7 @@
 						<h2>Honours Project Development Idea </h2>
 						<p> This project is a product of a Honours Software Development Degree. The idea of the project is to develop a web based healthcare support application that is uniquely created in Greece, specifically for the area of Kastorias. The aim is to make more practical, user-friendly, accurate, and safer online method compared to the traditional methods.   </p>
 					</div>
-					<br />
+					
 					<div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center">
 						<h2>The Functionality of this web app </h2>
 						<p> The core functionality of this web-based application includes the availability of crucial details like local pharmacies, doctors with their names, contact information, professional specialty and location, a list of emergency contact numbers, as well as guidelines and instructions on fundamental first aid techniques. In addition, the application provides users with the option to register for an account and keep a personal medical record (a medical electronic file), allowing them to input and securely store their personal health information, effectively replacing the traditional health booklet. </p>
@@ -128,10 +133,5 @@
 			</div>
 		</div>
 	</section>
-
-	<br />
-	<br />
-	<br />
-	<br />
 
 </body>
