--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Shared/_Layout.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm bg-white">
         <div class="container-fluid">
-            <a class="navbar-title" asp-area="" asp-controller="Home" asp-action="Index">EleficNet</a>
+			<h class ="navbar-title"> EleficNet </h>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
