--- a/EleFiCNetMVC/EleFiCNetMVC/wwwroot/css/site.css
+++ b/EleFiCNetMVC/EleFiCNetMVC/wwwroot/css/site.css
@@ -29,21 +29,21 @@ body {
         Nav  style 
    =========================*/
 .navbar-title {
-    font-size: 25px;
+    font-size: 20px;
     color: black;
-    margin-top: 7px;
-    margin-bottom: 3px;
+    margin-top: 2px;
+    margin-bottom: 2px;
     text-decoration: none;
+    font-weight: bold;
 }
 
 .nav-link {
     font-size: 12px;
     color: black;
-    font-weight: 400;
     text-transform: uppercase;
     letter-spacing: 4px;
-    margin-top: 7px;
-    margin-bottom: 3px;
+    margin-top: 2px;
+    margin-bottom: 2px;
     font-weight: bold;
 }
 
