--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Shared/_Layout.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                         <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Pharmacy">Pharmacy</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Microbiological Labs">Microbiological Labs</a>
+                        <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Labs">Microbiological Labs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Doctors">Doctors</a>
@@ -73,7 +73,7 @@
                                 <a class=" text-white" asp-area="" asp-controller="Home" asp-action="Pharmacy">Pharmacy</a>
                             </li>
                             <li>
-                                <a class=" text-white" asp-area="" asp-controller="Home" asp-action="Microbiological Labs">Microbiological Labs</a>
+                                <a class=" text-white" asp-area="" asp-controller="Home" asp-action="Labs">Microbiological Labs</a>
                             </li>
                             <li>
                                 <a class="text-white" asp-area="" asp-controller="Home" asp-action="Doctors">Doctors</a>
