Pharmacy Page (frontend)

--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Index.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 					<div class="block">
 						<h>Making Health Care <br /> Better <span style="color: white">Together</span></h>
 						<p>
-							Welcome to eleficNet. Here we care about you and your health and <br />we want to make your life easier
+							Welcome to eleFicNet. Here we care about you and your health and <br />we want to make your life easier
 						</p>
 					</div>
 				</div>
@@ -29,7 +29,7 @@
 		</div>
 	</section>
 
-	<section class="services-content" id="services-content">
+	<section id="services-content">
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-xl-3 col-sm-6 mb-5 ">
