--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Pharmacy.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Pharmacy.cshtml
@@ -21,15 +21,21 @@
 		</div>
 	</section>
 
+	<!--SERVICE SECTION-->
+	<section class="services" id="services">
+		<div class="container">
+			<div class="title">
+				<h class="text-center">Services</h>
+				<h1 class="text-center">What we can do for you</h1>
+				@*Searchbar to be added*@
+			</div>
+		</div>
+	</section>
+
 	<!--Pharmacies SECTION-->
 
 	<section id="p-services">
 		<div class="container">
-			<div class="row ">
-				<div class="title">
-					<h>Services</h>
-					<h1>What can we do for you</h1>
-				</div>
 				<div class="row">
 					<div class="col-lg-6 ">
 						<img class="pharmacy-img" src="~/media/pharmacy.jpg" alt=" " />
@@ -43,28 +49,27 @@
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-	</section>
+	
+		<br />
+		<br />
+		<br />
+		<br />
 
 	<!--DRUGS SECTION-->
-
-	<section id="drug-services">
-		<div class="container">
-				<div class="row">
-					<div class="col-lg-6 ">
-						<img class="img-fluid" src="~/media/drug.jpg" alt=" " />
-					</div>
-					<div class="col-lg-6 pt-4 pt-lg-0 content justify-content-center">
-					<h class="drug-title badge rounded-pill"> Drugs</h>
-						<h1 class="drug-title-2">Find your Drug  </h1>
-					    <p class="drug-p-1"> Here you can find information about all the Drugs. </p>
-						<div>
-							<a class="btn btn-primary btn-lg" asp-area="" asp-controller="Home" asp-action="" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</a>
-						</div>
-					</div>
-				</div>
+		 <div class="row">
+		    <div class="col-lg-6 ">
+				<img class="img-fluid" src="~/media/drug.jpg" alt=" " />
 			</div>
+				<div class="col-lg-6 pt-4 pt-lg-0 content justify-content-center">
+				   <h class="drug-title badge rounded-pill"> Drugs</h>
+				   <h1 class="drug-title-2">Find your Drug  </h1>
+				   <p class="drug-p-1"> Here you can find information about all the Drugs. </p>
+				<div>
+					<a class="btn btn-primary btn-lg" asp-area="" asp-controller="Home" asp-action="" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</a>
+		        </div>
+	            </div>	
+		  </div>
+		</div>
 	</section>
 
 </body>
