LogIn/Sign in (frontend)

--- a/EleFiCNetMVC/EleFiCNetMVC/wwwroot/css/site.css
+++ b/EleFiCNetMVC/EleFiCNetMVC/wwwroot/css/site.css
@@ -724,6 +724,20 @@ a {
 
 
 
+/* =========================
+           LOG IN
+   =========================*/
+
+.divider:after,
+.divider:before {
+    content: "";
+    flex: 1;
+    height: 1px;
+    background: #eee;
+}
+
+
+
 
 
 
