--- a/EleFiCNetMVC/EleFiCNetMVC/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,23 +4,36 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
-        </form>
-    </div>
-</div>
+<body>
+
+    <section class="vh-100">
+        <div class="container py-5 h-100">
+            <div class="row d-flex align-items-center justify-content-center h-100">
+                <div class="col-md-8 col-lg-7 col-xl-6">
+                    <img class="img-fluid" src="~/media/login.jpg" alt=" ">
+                </div>
+                  <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
+                    <form method="post">
+                        <div class="d-flex align-items-center mb-1 pb-1">
+                            <h1 class=" fw-bold ">Forgot your Password?</h1>
+                        </div>
+                        <h5 class="fw-normal mb-1 pb-1" style="letter-spacing: 1px;">Please enter your email address to reset your new password</h5>
+                        <hr/>
+                        <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+                        <div class="form-floating mb-3">
+                            <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                            <label asp-for="Input.Email" class="form-label">Enter your Email</label>
+                            <span asp-validation-for="Input.Email" class="text-danger"></span>
+                        </div>
+                        <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
+                    </form>
+                  </div>
+             </div>
+           </div>
+     </section>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+</body>
