--- a/EleFiCNetMVC/EleFiCNetMVC/Areas/Identity/Pages/Account/Register.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Areas/Identity/Pages/Account/Register.cshtml
@@ -38,7 +38,7 @@
                         <div class="d-flex align-items-center justify-content-center pb-4 p-3">
                             <p class="mb-0 me-2">
                                 Already have an account?
-                                <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Login</a>
+                                <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Login</a>
                             </p>
                         </div>
                     </form>
