--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Index.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Index.cshtml
@@ -94,7 +94,8 @@
 					</div>
 					<div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center">
 						<h2>Create your e-Medical File </h2>
-						<p> With eleficNet you can create your own e-medical file and have access to your records anywhere at anytime </p>
+						<p> eleFicNet empowers users to effortlessly create and access electronic medical files anytime, anywhere. This user-friendly platform revolutionizes healthcare by providing seamless organization and instant retrieval of vital information. With robust security measures, it ensures unrestricted access to comprehensive medical history, fostering proactive health management and efficient communication with healthcare providers for personalized, informed, and accessible healthcare.
+							</p>
 						<div>
 							<a class="btn btn-primary btn-lg" asp-area="" asp-controller="Home" asp-action="eFile" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Create</a>
 						</div>
