Frontend ( texts updated)

--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Home/About.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Home/About.cshtml
@@ -12,7 +12,7 @@
 					<div class="block">
 						<h>About us</h>
 						<p>
-							Find Out More About Us and Our Website
+							Explore our website to discover more <br/> about us and our offerings.
 						</p>
 					</div>
 				</div>
