--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Doctors.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Doctors.cshtml
@@ -12,7 +12,7 @@
 					<div class="block">
 						<h>The Local <br />Doctors of Kastoria</h>
 						<p>
-							Here you can find information about <br /> all the Doctors of the area.
+							Discover information about local doctors <br/> in this comprehensive resource hub.
 						</p>
 					</div>
 				</div>
