--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Labs.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Labs.cshtml
@@ -13,7 +13,7 @@
 					<div class="block">
 						<h>The Local <br />Microbiological Labs of Kastoria</h>
 						<p>
-							Here you can find information about all the <br> Microbiological Labs of the area </p>
+							Discover comprehensive details on microbiological labs <br/> in the local area through this informative resource hub </p>
 					</div>
 				</div>
 			</div>
