--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Pharmacy.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Pharmacy.cshtml
@@ -13,7 +13,7 @@
 					<div class="block">
 						<h>The Local <br />Pharmacies of Kastoria</h>
 						<p>
-							Here you can find the <span style="color: white"> Pharmacies </span> that are on duty day and night. <br />and you can find information about  <span style="color: white"> Drugs.</span> <br />  At Any <span style="color: white">Time. </span>
+							Discover pharmacies that offer essential services, <br/> ensuring convenient access to medicine-related details at any time you need
 						</p>
 					</div>
 				</div>
@@ -43,7 +43,7 @@
 					<div class="col-lg-6 pt-4 pt-lg-0 content justify-content-center">
 						<h class="p-title badge rounded-pill">Pharmacy</h>
 						<h1 class="p-title-2">Find your Local Pharmacy</h1>
-						<p class="p-pargh "> Here you can find all the local Pharmacies of Kastoria that are open day and night</p>
+					<p class="p-pargh "> Explore Kastoria's comprehensive list of 24/7 pharmacies, ensuring round-the-clock access to vital healthcare services. This curated compilation guarantees that you can easily locate and access local pharmacies, providing peace of mind with day and night availability for your essential pharmaceutical needs in the Kastoria area.</p>
 						<div>
 							<a class="btn btn-primary btn-lg" asp-area="" asp-controller="Home" asp-action="" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</a>
 						</div>
@@ -61,9 +61,9 @@
 				<img class="img-fluid" src="~/media/drug.jpg" alt=" " />
 			</div>
 				<div class="col-lg-6 pt-4 pt-lg-0 content justify-content-center">
-				   <h class="drug-title badge rounded-pill"> Drugs</h>
-				   <h1 class="drug-title-2">Find your Drug  </h1>
-				   <p class="drug-p-1"> Here you can find information about all the Drugs. </p>
+					<h class="drug-title badge rounded-pill"> Medicine</h>
+				   <h1 class="drug-title-2">Find your Medicine  </h1>
+					<p class="drug-p-1"> Explore a wealth of information on various medicines gathered in one convenient place. Whether you seek details on prescriptions, over-the-counter options, or general medication knowledge, this comprehensive resource serves as your go-to guide, providing valuable insights into the world of pharmaceuticals </p>
 				<div>
 					<a class="btn btn-primary btn-lg" asp-area="" asp-controller="Home" asp-action="" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</a>
 		        </div>
