Frontend (index updated)

--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Index.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Index.cshtml
@@ -6,13 +6,11 @@
 
 	<section id="hero-area">
 		<div class="container">
-			<div class="row">
-				<div class="col-md-6 offset-md-6">
-					<div class="block">
-						<h>Making Health Care <br /> Better <span style="color: white">Together</span></h>
-						<p>
-							Welcome to EleficNet. Here we care about you and your health and <br />we want to make your life easier
-						</p>
+			<div class="block">
+				<div class="d-flex justify-content-center ">
+					<div class="text-white">
+						<h class="mb-3">Making Health Care <br /> Better Together</h>
+					    <p class="mb-3">Welcome to EleficNet. <br /> Here we care about you and your health and <br />we want to make your life easier</p>
 					</div>
 				</div>
 			</div>
