About page (frontend updated)

--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Index.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Index.cshtml
@@ -7,10 +7,10 @@
 	<section id="hero-area">
 		<div class="container">
 			<div class="block">
-				<div class="d-flex justify-content-center ">
+				<div class="d-flex justify-content-right ">
 					<div class="text-white">
 						<h class="mb-3">Making Health Care <br /> Better Together</h>
-					    <p class="mb-3">Welcome to EleficNet. <br /> Here we care about you and your health and <br />we want to make your life easier</p>
+					    <p class="mb-3">Welcome to EleficNet. <br /> Here we care about you and your health and we want to make your life easier</p>
 					</div>
 				</div>
 			</div>
