--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Labs.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Home/Labs.cshtml
@@ -39,7 +39,7 @@
 			<div class="pageHeaderDate"> Date: @Html.Label("DateCreated", DateTime.Today.ToShortDateString().ToString(), new { @readonly = "readonly" })</div>
 			<article class="postcard light yellow">
 				<a class="postcard__img_link" href="#">
-					<img class="postcard__img" src="https://picsum.photos/501/501" alt="Image Title" />
+					<img class="postcard__img" src="~/media/lab1.jpg" alt="Image Title" />
 				</a>
 				<div class="postcard__text t-dark">
 					<h1 class="postcard__title yellow">Panta Thiresia D.</h1>
@@ -61,7 +61,7 @@
 			</article>
 			<article class="postcard light yellow">
 				<a class="postcard__img_link" href="#">
-					<img class="postcard__img" src="https://picsum.photos/501/501" alt="Image Title" />
+					<img class="postcard__img" src="~/media/lab2.jpg" alt="Image Title" />
 				</a>
 				<div class="postcard__text t-dark">
 					<h1 class="postcard__title yellow"><a href="#">Podcast Title</a></h1>
@@ -83,7 +83,7 @@
 			</article>
 			<article class="postcard light yellow">
 				<a class="postcard__img_link" href="#">
-					<img class="postcard__img" src="https://picsum.photos/501/501" alt="Image Title" />
+					<img class="postcard__img" src="~/media/lab1.jpg" alt="Image Title" />
 				</a>
 				<div class="postcard__text t-dark">
 					<h1 class="postcard__title yellow"><a href="#">Podcast Title</a></h1>
@@ -105,7 +105,7 @@
 			</article>
 			<article class="postcard light yellow">
 				<a class="postcard__img_link" href="#">
-					<img class="postcard__img" src="https://picsum.photos/501/501" alt="Image Title" />
+					<img class="postcard__img" src="~/media/lab2.jpg" alt="Image Title" />
 				</a>
 				<div class="postcard__text t-dark">
 					<h1 class="postcard__title yellow"><a href="#">Podcast Title</a></h1>
@@ -127,7 +127,7 @@
 			</article>
 			<article class="postcard light yellow">
 				<a class="postcard__img_link" href="#">
-					<img class="postcard__img" src="https://picsum.photos/501/501" alt="Image Title" />
+					<img class="postcard__img" src="~/media/lab1.jpg" alt="Image Title" />
 				</a>
 				<div class="postcard__text t-dark">
 					<h1 class="postcard__title yellow"><a href="#">Podcast Title</a></h1>
@@ -149,7 +149,7 @@
 			</article>
 			<article class="postcard light yellow">
 				<a class="postcard__img_link" href="#">
-					<img class="postcard__img" src="https://picsum.photos/501/501" alt="Image Title" />
+					<img class="postcard__img" src="~/media/lab2.jpg" alt="Image Title" />
 				</a>
 				<div class="postcard__text t-dark">
 					<h1 class="postcard__title yellow"><a href="#">Podcast Title</a></h1>
